--- a/angular-10-client/package.json
+++ b/angular-10-client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "axios": "^0.21.1",
     "ng-zorro-antd": "^11.4.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
